--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NAH LATER</title>
     <meta name="description" content="todo app website" />
