--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
 <body>
     <nav class="navbar">
+        
         <div class="logo">
             <h1>NAH LATER</h1>
+            <img src="./images/favicon.ico" alt="my_icon" style="width: 75px; height: auto; margin-right: 40px"/>
             <p style="font-size: medium">ORGANIZE YOUR CHAOS... EVENTUALLY.</p>
         </div>
         <div class="nav-icons">
