--- a/create_task.html
+++ b/create_task.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
     <link preconnect href="https://67f56836913986b16fa476aa.mockapi.io">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#1c1c1c">
 </head>
 
 <body>
