--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link preconnect href="https://67f56836913986b16fa476aa.mockapi.io">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1c1c1c">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- template -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 440px) and (device-height: 956px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="splash_screens/iPhone_16_Pro_Max_landscape.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 402px) and (device-height: 874px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="splash_screens/iPhone_16_Pro_landscape.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="splash_screens/iPhone_16_Plus__iPhone_15_Pro_Max__iPhone_15_Plus__iPhone_14_Pro_Max_landscape.png">
