FIX: PWA Status Bar Apple

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link preconnect href="https://67f56836913986b16fa476aa.mockapi.io">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1c1c1c">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#1c1c1c">
     <!-- template -->
     <meta name="apple-mobile-web-app-capable" content="yes">
